--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 bin
 *.launch
 .settings
+.javadoc
+.factorypath
 .metadata
 .classpath
 .project
@@ -25,3 +27,5 @@ logs
 # Files from Forge MDK
 forge*changelog.txt
 changelog.txt
+/.apt_generated_tests/
+/Users/
